--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
  <button type="button" class="btn btn-danger" onClick="rgb1 = 'yellow'">Yellow</button>
  <button type="button" class="btn btn-danger"onClick="rgb1 = 'black'">Black</button>
  <button type="button" class="btn btn-danger"onClick="rgb1 = 'white'">White</button>
+  <button type="button" class="btn btn-danger"onClick="rgb1 = rgb3">Random Colour</button>
 </div>
     <script type="text/javascript" src="main.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
